RESOLVED FIXED216723
[LFC][IFC] InlineFormattingContext::computeGeometryForLineContent should not construct Display::Lines
https://bugs.webkit.org/show_bug.cgi?id=216723
Summary [LFC][IFC] InlineFormattingContext::computeGeometryForLineContent should not ...
alan
Reported 2020-09-18 19:27:48 PDT
It belongs in display builder.
Attachments
Patch (9.51 KB, patch)
2020-09-18 19:38 PDT, alan
no flags
alan
Comment 1 2020-09-18 19:38:46 PDT
EWS
Comment 2 2020-09-19 09:47:01 PDT
Committed r267315: <https://trac.webkit.org/changeset/267315> All reviewed patches have been landed. Closing bug and clearing flags on attachment 409189 [details].
Radar WebKit Bug Importer
Comment 3 2020-09-19 09:47:17 PDT
Note You need to log in before you can comment on or make changes to this bug.