[LFC][IFC] InlineFormattingContext::computeGeometryForLineContent should not construct Display::Lines https://bugs.webkit.org/show_bug.cgi?id=216723

Reviewed by Antti Koivisto.

Display::Lines construction should live in the display builder. However currently we don't yet have a real builder, so let's
just use the integration layer.
This is also in preparation for removing all the Display::InlineContent code from the Layout namespace.

* layout/displaytree/DisplayPainter.cpp:
(WebCore::Display::paintInlineContent):
* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computeGeometryForLineContent):
* layout/integration/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::layout):
(WebCore::LayoutIntegration::LineLayout::constructDisplayContent):
* layout/integration/LayoutIntegrationLineLayout.h:


Canonical link: https://commits.webkit.org/229539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267315 268f45cc-cd09-0410-ab3c-d52691b4dbfc